--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,2 @@
 <p>Очень интересное занятие, но слишком быстро все происходит и я не успевал в параллели выполнять задания.</p>
-<p>Пожалуйс пока нет предложений. Текущий метод выглядет более чем разумным.</p>
+<p>Пожалуй пока нет предложений. Текущий метод выглядет более чем разумным.</p>
